# serial_packets_py

./: README.md  TODO.txt  build.sh  diff_pip.sh  pyproject.toml  upload_pypi.sh  upload_testpypi.sh
src/examples/: main.py  master.py  slave.py
src/serial_packets/: _interval_tracker.py  _packet_decoder.py  _packet_encoder.py  _packets.py  client.py  packet_decoder.py  packet_encoder.py  packets.py
tests/: test_interval_tracker.py  test_packet_data.py  test_packet_decoder.py  test_packet_encoder.py
