# Doc:
# https://hatch.pypa.io/latest/config/build/
#
# Examples:
# https://github.com/pypa/hatch/blob/master/pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serial_packets"
version = "0.1.1"
authors = [
  { name="Zapta", email="zapta@zapta.com" },
]
description = "A Python impelementation of the Serial Packets protocol"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyserial-asyncio >=0.6.0",
    "pythoncrc >=1.21.0",
]

[tool.hatch.build.targets.sdist]
include = [
  "LICENSE",
  "/src/serial_packets",
]
# NOTE: root .gitignore can't be excluded per 
# https://github.com/pypa/hatch/discussions/368
exclude = [
  ".gitignore",
  ".vscode",
  ".*.sh",
]

[project.urls]
"Homepage" = "https://github.com/zapta/serial_packets_py"
"Bug Tracker" = "https://github.com/zapta/serial_packets_py/issues"

